--- a/src/app/components/dataset-viewer/dataset-viewer-table/dataset-viewer-table.component.html
+++ b/src/app/components/dataset-viewer/dataset-viewer-table/dataset-viewer-table.component.html
@@ -1,10 +1,31 @@
 <div class="table flex-column">
-  <p
-    *ngIf="datasetName"
-    class="table-name"
-  >
-    {{ datasetName }}
-  </p>
+  <div class="table-heading flex-between">
+    <div
+      *ngIf="datasetName"
+      class="table-name flex-center"
+    >
+      {{ datasetName }}
+    </div>
+    <div
+      class="table-file-upload flex-start-center"
+    >
+      <label class="table-file-upload-label">
+        Choose file with row data:
+      </label>
+      <input
+        class="table-file-upload-field flex-center"
+        type="file"
+        (change)="handleFileInput($event.target.files)"
+      >
+      <button
+        class="table-file-upload-button flex-center"
+        (click)="handleUploadFile()"
+        [disabled]="!fileToUpload"
+      >
+        Upload
+      </button>
+    </div>
+  </div>
   <table
     *ngIf="datasetRows !== null"
     class="flex-center"
@@ -70,24 +91,12 @@
     </tr>
   </table>
   <div
-    *ngIf="datasetName"
-    class="table-file-upload flex-column-between"
+    class="table-scroll-top-button flex-center"
+    (click)="handleScrollTop()"
   >
-    <label
-      [for]="mock"
-    >
-      Select mock json file to add dataset rows:
-    </label>
-    <input
-      type="file"
-      id="mock"
-      (change)="handleFileInput($event.target.files)"
-    >
-    <div
-      class="table-file-upload-button flex-center"
-      (click)="uploadDatarows.emit(constructFileUploadObject())"
-    >
-      Upload
-    </div>
+    <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <path d="M18.221,7.206l9.585,9.585c0.879,0.879,0.879,2.317,0,3.195l-0.8,0.801c-0.877,0.878-2.316,0.878-3.194,0  l-7.315-7.315l-7.315,7.315c-0.878,0.878-2.317,0.878-3.194,0l-0.8-0.801c-0.879-0.878-0.879-2.316,0-3.195l9.587-9.585  c0.471-0.472,1.103-0.682,1.723-0.647C17.115,6.524,17.748,6.734,18.221,7.206z" fill="#515151"/>
+    </svg>
+
   </div>
 </div>
